--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.7"
   }
