--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.5.0",
+    "node-cron": "^4.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.7"
   }
