AI voice generator implemented

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.5.0",
     "node-cron": "^4.1.1",
     "node-telegram-bot-api": "^0.66.0",
+    "openai": "^6.7.0",
     "sqlite3": "^5.1.7"
   }
 }
